--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,4 +28,7 @@
 
     <script src='{{ site.baseurl }}/public/js/script.js'></script>
   </body>
+
+<body class="theme-base-08c">
+</body>
 </html>
