--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,5 +30,16 @@
   </body>
 
 <body class="theme-base-08c">
+/* Cyan */
+.theme-base-0c .sidebar,
+.theme-base-0c .sidebar-toggle:active,
+.theme-base-0c #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: #75b5aa;
+}
+.theme-base-0c .container a,
+.theme-base-0c .sidebar-toggle,
+.theme-base-0c .related-posts li a:hover {
+  color: #75b5aa;
+}
 </body>
 </html>
