--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Notion </a>
+<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox" {% if page.title =="Notion" %}checked{% endif %}>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub </a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
