--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Notion </a>
-<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox" {% if page.title =="Notion" %}checked{% endif %}>
+    <a class="sidebar-nav-item" href="{{ www.notion.so/minjukimnotion }}/archive/v{{ site.version }}.zip">Notion </a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub </a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
