--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="{{ www.notion.so/minjukimnotion }}/archive/v{{ site.version }}.zip">Notion </a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub </a>
+    <a class="sidebar-nav-item" href="{{ https://github.com/minju-nim }}">GitHub </a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
